styles/teleperiod.css
.teleperiod {
    border:#ccc 1px solid;
}

.teleperiod text {
    -webkit-user-select: none; /* Chrome/Safari */
    -moz-user-select: none; /* Firefox */
    -ms-user-select: none; /* IE10+ */

    /* Rules below not implemented in browsers yet */
    -o-user-select: none;
    user-select: none;
}

.teleperiod .main {
    fill:rgb(250,250,250);

}

.teleperiod .day rect {
    fill:#f2f7e8;

}

.teleperiod .day .workingtime {
    fill:rgba(150, 150, 150, .15);
    cursor:pointer;
}

/* Do not display event summary on working times */
.teleperiod .day .workingtime-summary {
    display:none;
}

.teleperiod .day .timelineday {

}

.teleperiod .day .event {
    fill:rgba(150, 10, 10, .80);
}

.teleperiod .day .selection {
    fill:rgba(0, 0, 255, .8);
    cursor:pointer;
}

.teleperiod .day .selection.mouseover {
    fill:rgba(0, 0, 0, .6);
}


.teleperiod .day .weekday {
    fill:#bbb;
    opacity:.5;
    font-size:12px;
    font-family: Arial;
}



.teleperiod .day .summary {
    fill:#fff;
    opacity:.8;
    font-size:12px;
    font-family: Arial;
}

.teleperiod .day .month {
    fill:#ffa05b;
    font-size:14px;
    font-family: Arial;
    user-select: none;
}

.teleperiod .day .date {
    fill:#ffa05b;
    font-size:16px;
    font-family: Arial;
    text-anchor: middle;
    font-weight:bold;

    text-shadow: 1px 1px 2px rgba(150, 150, 150, .6);
    user-select: none;
}


.teleperiod .dayoff rect {
    fill:rgb(240,240,240);
}


.teleperiod .button {
    cursor:pointer;
    opacity:.7;
}

.teleperiod .buttonbg {
    fill:#999;
}


.teleperiod .buttonarrow {
    fill:#ffa05b;
}


.teleperiod .button:hover {
    opacity:.9;
}


.teleperiod .wtTooltip {
    fill:#ffa05b;
    opacity:.7;
    pointer-events: none;
}

.teleperiod .wtTooltip * {
    pointer-events: none;
}


.teleperiod .wtTooltipDate,
.teleperiod .wtTooltipHour {
    fill:#000;
    font-size:10px;
    font-family: Arial;
}

.teleperiod .wtTooltipHour {
    font-size:13px;
    font-weight:bold;
}


.teleperiod .timeline-name {
    fill:#fff;
    text-shadow: 0px 0px 2px #000;
}

